--- a/styles/style.css
+++ b/styles/style.css
@@ -26,9 +26,17 @@ body>div {
 
     position: absolute;
     left: 100px;
-    top: 300px;
+    top: 80px;
     width: 700px;
     height: 500px; */
+}
+
+#testCanvase{
+    position: absolute;
+    bottom: 3px;
+    width: 100px;
+    height: 70px;
+    /* background: red; */
 }
 
 #toolbar_top {
