--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,16 @@
-
-
 /* body>div, button {
     font-family: "Computer Modern", sans-serif !important;
 } */
+
+@font-face {
+    font-family: "Pyidaungsu";
+    src: url("fonts/Pyidaungsu-2.5.3_Regular.ttf");
+}
+
+body, h3, h4, p, label, .header, .ui.button {
+    font-family: "Pyidaungsu";
+    src: url("fonts/Pyidaungsu-2.5.3_Regular.ttf");
+}
 
 body {
     padding: 0;
@@ -16,53 +24,52 @@ body>div {
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    
 }
 
 #container_2d {
-    min-width: max-content;
+    position: relative;
+    /* min-width: max-content; */
     flex-grow: 1;
+/* 
 
-    /* min-height: 400px;
+    min-height: 400px;
     position: absolute;
     left: 70px;
     top: 80px;
     width: 500px;
-    height: 700px; */
+    max-height: 600px; */
+    
+    display:flex; 
 }
 
-#testCanvase{
-    position: absolute;
-    bottom: 3px;
-    width: 100px;
-    height: 70px;
-    /* background: red; */
-}
 
 #toolbar_top {
-    /* display: none; */
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin: 0 3px;
 }
 
-#btnStop {
-    float: right;
-    margin: 3px;
-    padding: 7px;
-}
 
-#btnStop1 {
+#btnPlay {
     margin-left: 5px;
+    padding: 0;
+}
+#btnReplay{
+    margin-left: 5px;
+    padding : 0;
 }
 
-#btn2 {
+#btnPervious {
     margin-left: 5px;
+    padding: 0;
 }
 
 #console {
-    background: rgb(22, 126, 224);
+    background: #4c6360;
     flex-grow: 1;
-    height: 40px;
+    height: 30px;
     padding-left: 100px;
     overflow-y: auto;
 }
@@ -70,4 +77,141 @@ body>div {
 #console>p {
     margin: 0;
     padding: 0;
+}
+
+.btn-small {
+    height: 25px;
+    line-height: 25px;
+    padding: 0 0.5rem;
+}
+
+#control_panel{
+    
+
+    /* background: red; */
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    pointer-events: none;
+
+}
+
+#description_panel {
+  
+    margin: 0px;
+    width: -webkit-fill-available;
+    max-height: 37%;
+    
+    z-index: 3;
+    
+    bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px !important;
+    line-height: 168%;
+    align-items: center;
+}
+
+#button_panel{
+    background: transparent;
+
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+}
+
+#buttonRow{
+    /* background: red; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin : 3px 5px 10px 5px; 
+    /* margin-bottom: 10px; */
+    pointer-events: all;
+}
+
+#btn_hide_desc_panel {
+    visibility: hidden;
+    padding: 0;
+}
+
+#btnHomeBottom{
+    display: none;
+    position: absolute;
+    bottom: 8px;
+    z-index: 3;
+    right: 8px;
+}
+
+#placeHolder{
+    width: 100%;
+    height: 0px;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
+#description_panel p {
+    margin: 0;
+    
+}
+
+#description_panel .row{
+    display: none;
+}
+
+#description_panel div:first-child {
+    /* display: flex; */
+}
+
+.procedure_text {
+    color: #1b9705 !important;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+    margin-top: 0;
+    overflow-y: auto;
+    background: #dfdbdb;
+    border-radius: 7px;
+    padding: 10px 4px 9px 4px;
+    width: -webkit-fill-available;
+    max-width: 800px;
+}
+
+
+.column {
+    padding: 0px 5px;
+}
+
+.first_column {
+    /* background: red; */
+    padding-left: 5px;
+    /* width: 180px; */
+    text-align: center;
+}
+
+.sec_column {
+    text-align: justify;
+}
+
+#desc_panel_topbar {
+    /* background: chartreuse; */
+    width: 100%;
+
+}
+
+#btnHome {
+    
+    z-index: 3;
+    padding: 0;
+}
+
+#slide_control_panel{
+    margin : 0 10px;
 }
